# acme

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  REFACTORING_PLAN.md  RELEASE.md  REUSE.toml  SECURITY.md  acme.yml  codecov.yml  conda2pip.py  opencode.json  opencode.json.license  pyproject.toml  setup.cfg  setup.py  setup.py.license  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_feature.md  questions.md
.github/workflows/: test_cov_workflow.yml  tests_workflow.yml
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt
acme/: __init__.py  argument_processor.py  backend.py  client_orchestrator.py  config.py  dask_helpers.py  frontend.py  logger.py  memory_profiler.py  shared.py  spy_interface.py  validators.py
acme/results/: output_setup.py  post_processor.py  result_handler.py
acme/tests/: README.md  acme_setup.py  conftest.py  local_acme.py  no_slurm.sh  pytest.ini  run_tests.cmd  run_tests.sh  test_argument_processor.py  test_config.py  test_dask.py  test_internals.py  test_memory_profiler.py  test_output_setup.py  test_pmap.py  test_post_processor.py  test_result_handler.py  test_validators.py
doc/: Makefile  make.bat
doc/source/: advanced_usage.rst  api.rst  best_practices.rst  classifier_tutorial.rst  conf.py  connectome_tutorial.rst  contributing.rst  deeplearning_tutorial.rst  index.rst  quickstart.rst  troubleshooting_faq.rst  tutorials.rst  userguide.rst
doc/source/_static/: acme_icon.png.license  acme_icon.svg.license  classifier_tutorial.png.license  dashboard.gif.license  esi-style.css
