#
# Copyright © 2023 Ernst Strüngmann Institute (ESI) for Neuroscience
# in Cooperation with Max Planck Society
#
# SPDX-License-Identifier: BSD-3-Clause
#

[build-system]
requires = ["pyyaml", "setuptools", "setuptools_scm", "toml", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
module = [
    "dask_jobqueue",
    "h5py",
    "psutil",
    "scipy",
    "tqdm",
    "frontend",
]
ignore_missing_imports = true
