[metadata]
name = esi-acme
author = Ernst Strüngmann Institute (ESI) for Neuroscience in Cooperation with Max Planck Society
author-email = acme@esi-frankfurt.de
description = Asynchronous Computing Made ESI
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD-3
license_file = LICENSE
home-page = https://esi-acme.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/esi-neuroscience/acme/issues
    Documentation = https://esi-acme.readthedocs.io/en/latest/
    Source Code = https://github.com/esi-neuroscience/acme
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.data_files]
acme =
    CHANGELOG.md
    CITATION.cff
    LICENSE
    README.md
    tox.ini
