#
# Copyright © 2023 Ernst Strüngmann Institute (ESI) for Neuroscience
# in Cooperation with Max Planck Society
#
# SPDX-License-Identifier: BSD-3-Clause
#

[metadata]
name = esi-acme
author = Ernst Strüngmann Institute (ESI) for Neuroscience in Cooperation with Max Planck Society
author_email = it@esi-frankfurt.de
description = Asynchronous Computing Made ESI
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD-3
license_files = LICENSE
home_page = https://esi-acme.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/esi-neuroscience/acme/issues
    Documentation = https://esi-acme.readthedocs.io/en/latest/
    Source Code = https://github.com/esi-neuroscience/acme
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >= 3.7, < 3.11
install_requires =
    click < 8.1
    colorama
    dask < 2022.11
    dask-jobqueue >= 0.8, < 0.9
    h5py < 4
    numpy >= 1.0, < 2.0
    tqdm >= 4.31

[options.extras_require]
dev=
    ipdb
    ipython
    scipy >= 1.5, < 2.0
    numpydoc
    pytest-cov
    sphinx_automodapi
    sphinx_bootstrap_theme
    tox

[options.data_files]
acme =
    CHANGELOG.md
    CITATION.cff
    LICENSE
    README.md
    tox.ini
